# ws_monitor

./: .gitignore  README.md  config-pub.yaml  default_pub_config.yaml  example_web_config.yaml  install.sh  launch_publisher_venv.sh  publisher.py  pyproject.toml  requirements.txt  subscriber.py  web_config.example  wsmonitor_publisher.service.base
config/: web_config.yaml
src/ws_monitor/: publisher.py  subscriber.py  web_page.py  wsmon_run_flask.sh  wsmon_run_flask_restarting.sh  wsmon_run_gunicorn.sh
src/ws_monitor/static/: no_style.css  style.css  style_bluish.css
src/ws_monitor/templates/: base.html  index.html  ws_details.html  ws_users.html
